--- a/src/main/resources/static/css/classPage.css
+++ b/src/main/resources/static/css/classPage.css
@@ -2,7 +2,7 @@
 
 
 body{
-    background-color: #22292a;
+    background-color: rgb(0, 128, 255);
 }
 
 .space-btw {
@@ -17,6 +17,7 @@ body{
     background-color: whitesmoke;
     margin-top: 50px;
     padding: 30px;
+    border-radius: 25px;
 }
 
 .greeting{
@@ -34,6 +35,10 @@ body{
 #remove-line{
     text-decoration:none;
     color: black;
+    margin-right: 15px;
+}
+#remove-line:hover {
+	color:darkblue;
 }
 
 h5{
@@ -55,10 +60,10 @@ img{
     margin: 0 auto;
     background-color: whitesmoke;
     padding: 10px;
+    border-radius: 25px;
 }
-#text:hover {
-    /* other rules */
-    color: transparent;
-    transition: 1s;
+.hidden-text{
+	opacity: 0;
+	transition: opacity 10s ease-in-out;
 
 }
